fixed collapsed list margin

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -507,7 +507,8 @@ section {
 }
 #siteUpdates ul, #subscribe ul {
   padding: 1em;
-  margin: 0;
+  margin-top: 1em;
+  margin-bottom: .5em;
 }
 
 #siteUpdates h2::before {
